--- a/css/miestilo.css
+++ b/css/miestilo.css
@@ -1,11 +1,103 @@
-h1{
-    color: aquamarine;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: rgb(0, 0, 0);
+}
+
+section{
+    display: flex;
+    flex-direction: row;
+}
+.navegacion{
+    border: 1px solid rgb(0, 0, 0);
+    width: 20%;
+    height: 100vh;
+    float: left;
+    padding-left: 50px;
+    padding-top: 35px;
+    background-color: rgb(46, 41, 41);
+}
+
+.navegacion ul li{
+    list-style: none;
+}
+
+.navegacion ul li a{
+    font-size: 15px;
+    line-height: 10px;
+    text-decoration: none;
+    color: rgb(226, 221, 221);
+}
+
+.navegacion ul li a:hover{
+    color: rgb(104, 94, 94);
 
 }
 
-h1,h2,h3,h4,h5,h6,p{
+.container{
+    padding-top: 35px;
+    color: lightcyan;
+    height: 25vh;
+    display: block;
 
+}
+
+.container h2{
+    font-size: 28px;
+    margin-left: 13%;
+    margin-right: 13%;
+
+}
+
+.container p{
+    font-size: 13px;
+    margin-left: 13%;
+    margin-right: 13%;
+
+
+}
+
+.general{
+    flex-flow: column;
+    width: 80%;
+
+}
+
+.container-amarillo{
+    background-color: yellow;
+}
+
+.container-celeste{
+
+    background-color: cyan;
+}
+
+.container-rojo{
+    background-color: red;
+
+}
+
+.container_naranja{
+    background-color: orange;
+
+}
+
+h3{
+    padding-top: 50px;
+}
+
+h4{
+    font-size: 80px;
     text-align: center;
+}
 
+h3 p{
+    font-size: 12px;
+    margin-left: 28%;
+    margin-right: 28%;
+    padding-top: 20px;
 
 }
